[gd_scene load_steps=15 format=3 uid="uid://bovqnju3xp2ef"]

[ext_resource type="Script" path="res://Scripts/Principal/02 - Perfil de Usuario.gd" id="1_8h0of"]
[ext_resource type="Texture2D" uid="uid://cgavlolq1yri2" path="res://Recursos/Imagens/Fundos/fundoBranco.png" id="2_cgukm"]
[ext_resource type="PackedScene" uid="uid://bdskk0aw2cqem" path="res://Telas/Menus/MenuAbaixo.tscn" id="3_2yufv"]
[ext_resource type="Texture2D" uid="uid://dvv6xhk7j7rqu" path="res://Recursos/Imagens/Imagem Botoes/Logout.png" id="4_a0tlh"]
[ext_resource type="FontFile" uid="uid://b3qs137o2m78r" path="res://Recursos/Fontes/Poppins/Poppins-Bold.ttf" id="5_oa1rc"]
[ext_resource type="LabelSettings" uid="uid://3sie0gqg8ko1" path="res://Recursos/Configuracoes/label cor preta normal size 50.tres" id="5_ysai6"]
[ext_resource type="Texture2D" uid="uid://cv2d6f0yxe25y" path="res://Recursos/Imagens/Menus/engrenagemConfig.png" id="6_bi0wp"]
[ext_resource type="LabelSettings" uid="uid://cwt2bpk1l4pfx" path="res://Recursos/Configuracoes/label cor azul normal size 30.tres" id="6_dlydk"]
[ext_resource type="Texture2D" uid="uid://cdd1dxoqugn5y" path="res://Recursos/Imagens/Menus/ico-edit.png" id="7_he2oh"]
[ext_resource type="Texture2D" uid="uid://cwb6tch2kmdet" path="res://Recursos/Imagens/Outros/Moldura Foto Perfil.png" id="7_s2fui"]
[ext_resource type="Texture2D" uid="uid://bpxs7fu7fqu2e" path="res://Recursos/Imagens/Outros/Foto Perfil/Foto_padrão.png" id="8_c2o8h"]
[ext_resource type="Texture2D" uid="uid://dnu7uexxw76qs" path="res://Recursos/Imagens/Imagem Botoes/Salvos.png" id="8_tlbam"]
[ext_resource type="Texture2D" uid="uid://b2bxmw6wucbct" path="res://Recursos/Imagens/Fundos/fundoAzul.png" id="12_5lgr0"]
[ext_resource type="PackedScene" uid="uid://dm7cmd1vu3pp1" path="res://Recursos/Componentes/BotaoFundoBranco.tscn" id="13_yxuy8"]

[node name="02-PerfilDeUsuario" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_8h0of")

[node name="Fundo" type="Sprite2D" parent="."]
texture = ExtResource("2_cgukm")
centered = false
metadata/_edit_lock_ = true

[node name="Menu Abaixo" parent="." instance=ExtResource("3_2yufv")]
offset_top = 1712.0
offset_bottom = 1712.0

[node name="Botoes" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="LogOut" type="TextureButton" parent="Botoes"]
layout_mode = 0
offset_left = 279.0
offset_top = 1440.0
offset_right = 902.0
offset_bottom = 1584.0
texture_normal = ExtResource("4_a0tlh")

[node name="Voltar" type="Button" parent="Botoes"]
layout_mode = 0
offset_left = 224.0
offset_top = 190.0
offset_right = 264.0
offset_bottom = 269.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_oa1rc")
theme_override_font_sizes/font_size = 50
text = "<"
flat = true

[node name="Configuracoes" type="TextureButton" parent="Botoes"]
layout_mode = 0
offset_left = 816.0
offset_top = 206.0
offset_right = 876.0
offset_bottom = 266.0
texture_normal = ExtResource("6_bi0wp")
stretch_mode = 0

[node name="Edit Foto" type="TextureButton" parent="Botoes"]
layout_mode = 0
offset_left = 816.0
offset_top = 656.0
offset_right = 1328.0
offset_bottom = 1168.0
scale = Vector2(0.1, 0.1)
texture_normal = ExtResource("7_he2oh")
stretch_mode = 0

[node name="Salvos" type="TextureButton" parent="Botoes"]
layout_mode = 0
offset_left = 272.0
offset_top = 1264.0
offset_right = 707.0
offset_bottom = 1348.0
scale = Vector2(1.51161, 1.4956)
texture_normal = ExtResource("8_tlbam")

[node name="Dados" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Nome Conta" type="Label" parent="Dados"]
layout_mode = 0
offset_left = 216.0
offset_top = 776.0
offset_right = 885.0
offset_bottom = 847.0
text = "Nome do usuario da conta"
label_settings = ExtResource("5_ysai6")
horizontal_alignment = 1

[node name="Email" type="Label" parent="Dados"]
layout_mode = 0
offset_left = 343.0
offset_top = 901.0
offset_right = 764.0
offset_bottom = 944.0
text = "Endereço de email da conta
"
label_settings = ExtResource("6_dlydk")
horizontal_alignment = 1

[node name="Nascimento" type="Label" parent="Dados"]
layout_mode = 0
offset_left = 326.0
offset_top = 999.0
offset_right = 776.0
offset_bottom = 1042.0
text = "Data de nascimento da conta"
label_settings = ExtResource("6_dlydk")
horizontal_alignment = 1

[node name="Foto" type="Control" parent="Dados"]
anchors_preset = 0
offset_left = -34.0
offset_top = 64.0
offset_right = 6.0
offset_bottom = 104.0

[node name="FotoPerfil" type="Sprite2D" parent="Dados/Foto"]
position = Vector2(574, 411)
texture = ExtResource("8_c2o8h")

[node name="MolduraFotoPerfil" type="Sprite2D" parent="Dados/Foto"]
position = Vector2(574.5, 407)
scale = Vector2(2.615, 2.58)
texture = ExtResource("7_s2fui")

[node name="Box Load Foto" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="FundoAzul" type="Sprite2D" parent="Box Load Foto"]
position = Vector2(564, 936)
scale = Vector2(0.703704, 0.383333)
texture = ExtResource("12_5lgr0")

[node name="FundoAzul2" type="Sprite2D" parent="Box Load Foto"]
position = Vector2(560, 936)
scale = Vector2(0.661317, 0.363121)
texture = ExtResource("2_cgukm")

[node name="Sprite2D" type="Sprite2D" parent="Box Load Foto"]
position = Vector2(560, 992)
scale = Vector2(0.671053, 0.56579)
texture = ExtResource("8_c2o8h")

[node name="MolduraFotoPerfil2" type="Sprite2D" parent="Box Load Foto"]
position = Vector2(562.45, 987.5)
scale = Vector2(1.7355, 1.485)
texture = ExtResource("7_s2fui")

[node name="CarregarGaleria" parent="Box Load Foto" instance=ExtResource("13_yxuy8")]
layout_mode = 0
offset_left = 264.0
offset_top = 732.0
offset_right = 530.0
offset_bottom = 797.0
scale = Vector2(0.962419, 1.14092)
TextoBotao = "Galeria"

[node name="PegarCamera" parent="Box Load Foto" instance=ExtResource("13_yxuy8")]
layout_mode = 0
offset_left = 592.0
offset_top = 732.0
offset_right = 858.0
offset_bottom = 797.0
scale = Vector2(0.962419, 1.14092)
TextoBotao = "Camera"

[node name="Aceitar" parent="Box Load Foto" instance=ExtResource("13_yxuy8")]
layout_mode = 0
offset_left = 264.0
offset_top = 1173.0
offset_right = 530.0
offset_bottom = 1238.0
scale = Vector2(0.962419, 1.14092)
TextoBotao = "Aceitar"

[node name="Recusar" parent="Box Load Foto" instance=ExtResource("13_yxuy8")]
layout_mode = 0
offset_left = 592.0
offset_top = 1176.0
offset_right = 858.0
offset_bottom = 1241.0
scale = Vector2(0.962419, 1.14092)
TextoBotao = "Recusar"

[node name="Titulo" type="Label" parent="Box Load Foto"]
layout_mode = 0
offset_left = 236.0
offset_top = 624.0
offset_right = 883.0
offset_bottom = 695.0
text = "Metodo de carregamento"
label_settings = ExtResource("5_ysai6")

[connection signal="pressed" from="Botoes/LogOut" to="." method="_on_log_out_pressed"]
[connection signal="pressed" from="Botoes/Voltar" to="." method="_on_voltar_pressed"]
[connection signal="pressed" from="Botoes/Configuracoes" to="." method="_on_configuracoes_pressed"]
[connection signal="pressed" from="Botoes/Edit Foto" to="." method="_on_edit_foto_pressed"]
[connection signal="pressed" from="Botoes/Salvos" to="." method="_on_salvos_pressed"]
[connection signal="pressed" from="Box Load Foto/CarregarGaleria" to="." method="_on_carregar_galeria_pressed"]
[connection signal="pressed" from="Box Load Foto/PegarCamera" to="." method="_on_pegar_camera_pressed"]
[connection signal="pressed" from="Box Load Foto/Aceitar" to="." method="_on_aceitar_pressed"]
[connection signal="pressed" from="Box Load Foto/Recusar" to="." method="_on_recusar_pressed"]
